--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
   "devDependencies": {
     "concurrently": "^8.2.2"
   }
+  "dependencies": {
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "react-scripts": "5.0.1"
+}
 }
 
 
